--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "subprojects/Stick"]
 	path = subprojects/Stick
 	url = https://github.com/mokafolio/Stick.git
+[submodule "subprojects/StickLuaSol"]
+	path = subprojects/StickLuaSol
+	url = https://github.com/mokafolio/StickLuaSol.git
